# Innotter

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: default.yml  pytest_coverage.yml  tests_coverage.yml
innotter_django/: .env  Dockerfile  celery_entrypoint.sh  pyproject.toml  pytest.ini
innotter_django/core/: celery.py  error_messages.py  settings.py  urls.py
innotter_django/pages/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
innotter_django/pages/migrations/: 0001_initial.py
innotter_django/pages/tests/api/: conftest.py  factories.py
innotter_django/posts/: models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
innotter_django/posts/migrations/: 0001_initial.py  0002_post_likes.py
innotter_django/tests/api/: conftest.py  factories.py  test_page_views.py  test_post_views.py  test_posts_services.py  test_user_views.py
innotter_django/users/: auth.py  models.py  permissions.py  serializers.py  services.py  urls.py  verify.py  views.py
innotter_django/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_image_s3_path.py
innotter_django/users/tests/api/: conftest.py  factories.py  test_serializers.py  test_services.py  test_views.py
